--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
     <button class="load-profile" type="submit">Load profile</button>
     </form>
 
+    <section class="error-container">
+
+    </section>
+
     <section class="profile-container">
+
     </section>
 
     <template id='profile-template'>
       <section class="profile">
+        <a href="#" class="close">x</a>
         <section class="avatar">
           <img src="{{ avatar_url}}">
         </section>
@@ -33,9 +39,15 @@
           <h4>
             Followers: {{followers}}
           </h4>
-          <a href="#" id="close">x</a>
         </section>
         <br clear="all">
+      </section>
+    </template>
+
+    <template id="error-template">
+      <section class="error-message">
+        <p>{{ error }}</p>
+        <p>click to dismiss</p>
       </section>
     </template>
 
@@ -48,16 +60,31 @@
         $.get('http://api.github.com/users/'+ username + '?' + 'client_id=' + client_id + '&client_secret=' + client_secret, function(user){
           var newProfile = Mustache.render($('#profile-template').html(), user);
           $(newProfile).appendTo('.profile-container').slideDown();
+        }).error(function(){
+          var errorMessage = "Sorry, there's no user with the username: " + username
+          var message = Mustache.render($('#error-template').html(),{error: errorMessage})
+          $(message).appendTo('.error-container').slideDown("slow", function(){
+          });
+        }).always(function(){
+          $('#username').val('');
         })
       };
 
       $(document).ready(function(){
-
         $(".load-profile").on('click',function(event){
           event.preventDefault();
           addProfile($('#username').val());
           });
-
+        $('.profile-container').on('click', '.close', function(){
+          $(this).closest('.profile').slideUp(function(){
+            $(this).remove();
+          });
+        });
+        $('.error-container').on('click', '.error-message', function(){
+          $(this).slideUp(1000, function() {
+            $(this).remove();
+          });
+        });
       });
     </script>
 
