--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <title>
       Github Profiles
     </title>
+    <link href="./styles/normalize.css" rel="stylesheet">
     <link href="./styles/report.css" rel="stylesheet">
   </head>
   <body>
 
     <form id='add_profile'>
-    <input id='username' placeholder="Enter a Github username">
-    <button class="load-profile" type="submit">Load profile</button>
+      <input id='username' placeholder="Enter a Github username">
+      <button class="load-profile" type="submit">Load profile</button>
     </form>
 
     <section class="error-container">
