--- a/index.html
+++ b/index.html
@@ -56,38 +56,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.js'></script>
     <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
     <script src='key.js'></script>
-    <script>
-      function addProfile(username) {
-        $.get('http://api.github.com/users/'+ username + '?' + 'client_id=' + client_id + '&client_secret=' + client_secret, function(user){
-          var newProfile = Mustache.render($('#profile-template').html(), user);
-          $(newProfile).appendTo('.profile-container').slideDown();
-        }).error(function(){
-          var errorMessage = "Sorry, there's no user with the username: " + username
-          var message = Mustache.render($('#error-template').html(),{error: errorMessage})
-          $(message).appendTo('.error-container').slideDown("slow", function(){
-          });
-        }).always(function(){
-          $('#username').val('');
-        })
-      };
-
-      $(document).ready(function(){
-        $(".load-profile").on('click',function(event){
-          event.preventDefault();
-          addProfile($('#username').val());
-          });
-        $('.profile-container').on('click', '.close', function(){
-          $(this).closest('.profile').slideUp(function(){
-            $(this).remove();
-          });
-        });
-        $('.error-container').on('click', '.error-message', function(){
-          $(this).slideUp(1000, function() {
-            $(this).remove();
-          });
-        });
-      });
-    </script>
+    <script src='app.js'></script>
 
 
   </body>
